--- a/src/styles/Dashboard.css
+++ b/src/styles/Dashboard.css
@@ -1,27 +1,34 @@
 .dashboard {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 20px;
+    flex-direction: row;
 }
 
-.dashboard h1 {
+.dashboard > div {
+    flex: 1;
+    padding: 20px;
+}
+
+.dashboard .requestSection {
+    flex: 3;
+}
+
+.dashboard .requestSection h1 {
     margin-bottom: 30px;
     font-size: 26px;
     align-self: flex-start;
 }
 
-.dashboard form {
+.dashboard .requestSection form {
     width: 100%;
     display: flex;
     flex-direction: row;
 }
 
-.dashboard form > div {
+.dashboard .requestSection form > div {
     flex: 1;
 }
 
-.dashboard form input {
+.dashboard .requestSection form input {
     flex: 4;
     border: 1px solid #CCC;
     border-radius: 0;
@@ -31,11 +38,11 @@
     border-right: 0;
 }
 
-.dashboard form input:focus {
+.dashboard .requestSection form input:focus {
     border-color: #555;
 }
 
-.dashboard form button {
+.dashboard .requestSection form button {
     flex: 1;
     height: auto;
     border-radius: 0;
@@ -48,11 +55,16 @@
     transition: ease-in-out 100ms;
 }
 
-.dashboard form button:hover {
+.dashboard .requestSection form button:hover {
     background-color: #32322C;
 }
 
-.dashboard .selectComponent > div {
+.dashboard .requestSection .selectComponent > div {
     border-radius: 0;
     border: 1px solid #CCC;
+}
+
+.dashboard .optionsSection .protocoleInfo {
+    text-align: center;
+    font-style: italic;
 }
