--- a/src/styles/Input.css
+++ b/src/styles/Input.css
@@ -1,16 +1,15 @@
-.input {
-    margin: 4px 0;
+.optionsInput {
+    margin: 2px 0;
 }
 
-.input > input {
-    width: 100%;
+.optionsInput {
+    padding: 4px;
     border: 1px solid #CCC;
     border-radius: 0;
-    padding: 6px;
     font-family: inherit;
     transition: ease-in-out 100ms;
 }
 
-.input > input:focus {
+.optionsInput:focus {
     border-color: #555;
 }
