--- a/src/styles/Protocole.css
+++ b/src/styles/Protocole.css
@@ -2,7 +2,6 @@
 .getParams {
     display: flex;
     flex-direction: column;
-    width: 100%;
 }
 
 .postData h2,
@@ -13,21 +12,12 @@
 
 .postData > div,
 .getParams > div {
-    display: grid;
-    grid-template-columns: auto auto auto;
-    column-gap: 20px;
-}
-
-.postData > div > div,
-.getParams > div > div {
     display: flex;
     flex-direction: column;
 }
 
 .postData > span,
 .getParams > span {
-    width: 40px;
-    height: 26px;
     background-color: #157F1F;
     display: flex;
     justify-content: center;
@@ -37,6 +27,8 @@
     font-weight: bold;
     cursor: pointer;
     transition: ease-in-out 100ms;
+    margin: 20px 0;
+    padding: 6px;
 }
 
 .postData > span:hover,
