--- a/src/styles/Protocole.css
+++ b/src/styles/Protocole.css
@@ -16,6 +16,22 @@
     flex-direction: column;
 }
 
+.optionsInput {
+    margin: 2px 0;
+}
+
+.optionsInput {
+    padding: 4px;
+    border: 1px solid #CCC;
+    border-radius: 0;
+    font-family: inherit;
+    transition: ease-in-out 100ms;
+}
+
+.optionsInput:focus {
+    border-color: #555;
+}
+
 .addButton,
 .removeButton {
     background-color: #157F1F;
